# skills

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  NOTES.md  README.md  package-lock.json  package.json
algebraize/: SKILL.md
algebras/: SKILL.md
brainstorm/: SKILL.md
cd/: SKILL.md
checkpoint/: SKILL.md
cockpit/: Cargo.toml  README.md  run
cockpit/src/: main.rs
cockpit/static/: app.js  index.html  style.css
cockpit/tests/: api.rs  halt.rs  spa.rs
converge/: Cargo.toml  README.md  SKILL.md  package-lock.json  package.json  run  tsconfig.json
converge2/: Cargo.toml  SKILL.md
debrief/: SKILL.md
decompose-branch/: SKILL.md
decompose-pr/: SKILL.md
decontextualize/: SKILL.md
denarrate/: SKILL.md
distill/: SKILL.md
evolve/: SKILL.md
fork/: SKILL.md
gather/: SKILL.md
hunt/: SKILL.md
loop-address-pr-feedback/: SKILL.md
loop-codex-review/: SKILL.md
loop-review-skill-parallel/: SKILL.md
loop-review-skill-until-fixed-point/: SKILL.md
meta/: SKILL.md
migrate-memory/: SKILL.md  migrate.sh
mission-control/: RULES.md  SKILL.md  prompt.md
next/: SKILL.md
oneshot/: SKILL.md
ooda-attest/: Cargo.toml
ooda-attest/src/: main.rs
ooda-attest/tests/: cli.rs
ooda-codex-review/: Cargo.toml  README.md  SKILL.md  run
ooda-codex-review/src/: act.rs  decide.rs  ids.rs  main.rs  observe.rs  orient.rs  outcome.rs  recorder.rs  runner.rs
ooda-codex-review/src/decide/: action.rs  decision.rs
ooda-codex-review/src/observe/: codex.rs
ooda-codex-review/src/observe/codex/: batch.rs  verdict.rs
ooda-codex-review/tests/: cli.rs
ooda-core/: Cargo.toml  README.md
ooda-core/src/: action.rs  atomic_io.rs  attest.rs  axis.rs  blocker.rs  cohort.rs  current_manifest.rs  decision.rs  exit_code.rs  file_lock.rs  handoff_prompt.rs  lib.rs  md_escape.rs  non_empty.rs  outcome.rs  polling_interval.rs  pr_state.rs  pull_request_state.rs  rate_limit.rs  safe_body.rs  safe_url.rs  single_line_string.rs  spawn.rs  stall_key.rs  state_root.rs
ooda-pr/: CUTOVER_NOTES.md  Cargo.toml  README.md  SKILL.md  run
ooda-pr-codex-review/: Cargo.toml  README.md  SKILL.md  run
ooda-pr-codex-review/src/: act.rs  comment.rs  dashboard.rs  decide.rs  ids.rs  main.rs  observe.rs  orient.rs  outcome.rs  recorder.rs  runner.rs  text.rs
ooda-pr-codex-review/src/act/: address_claude_review.rs  ci.rs  closeout.rs  copilot.rs  review_docs.rs  sync_pull_request_metadata.rs
ooda-pr-codex-review/src/axis_impls/: ci.rs  claude_review.rs  closeout.rs  cursor.rs  mod.rs  pull_request_metadata.rs  reviews.rs  state.rs
ooda-pr-codex-review/src/comment/: post.rs  render.rs
ooda-pr-codex-review/src/decide/: action.rs  ci.rs  claude_review.rs  closeout.rs  codex_review.rs  copilot.rs  cursor.rs  decision.rs  doc_review.rs  merge_eligibility.rs  pr_meta.rs  pull_request_metadata.rs  reviews.rs  state.rs
ooda-pr-codex-review/src/observe/: branch.rs  codex.rs  github.rs
ooda-pr-codex-review/src/observe/codex/: batch.rs  verdict.rs
ooda-pr-codex-review/src/observe/github/: branch_protection.rs  branch_rules.rs  checks.rs  claude_review_attest.rs  closeout_attest.rs  compare.rs  copilot_config.rs  cursor_status.rs  doc_review_attest.rs  gh.rs  issue_events.rs  pr_meta_attest.rs  pr_view.rs  pull_request_metadata_attestation.rs  pull_request_view.rs  rate_limit.rs  review_threads.rs  reviews.rs  rulesets.rs  stack_root.rs  workflow_runs.rs
ooda-pr-codex-review/src/orient/: bot_threads.rs  ci.rs  claude_review.rs  closeout.rs  codex_review.rs  copilot.rs  cursor.rs  doc_review.rs  pull_request_metadata.rs  required_checks.rs  reviews.rs  state.rs  thread.rs
ooda-pr-codex-review/test/fixtures/github/: branch_rules_master.json  pr_view_merged.json  ruleset_with_copilot.json  rulesets_list.json
ooda-pr-codex-review/tests/: cli.rs
ooda-pr/src/: act.rs  dashboard.rs  decide.rs  ids.rs  main.rs  observe.rs  orient.rs  outcome.rs  recorder.rs  runner.rs  signal.rs  text.rs
ooda-pr/src/act/: address_claude_review.rs  ci.rs  copilot.rs  review_docs.rs
ooda-pr/src/axis_impls/: claude_review.rs  copilot.rs  doc_review.rs  mod.rs  pull_request_metadata.rs  reviews.rs  state.rs
ooda-pr/src/comment/: post.rs  render.rs
ooda-pr/src/decide/: action.rs  branch_sync.rs  ci.rs  claude_review.rs  closeout.rs  copilot.rs  cursor.rs  decision.rs  doc_review.rs  merge_eligibility.rs  pr_meta.rs  pull_request_metadata.rs  reviews.rs  signing_eligibility.rs  state.rs
ooda-pr/src/observe/: branch.rs  github.rs
ooda-pr/src/observe/github/: branch_protection.rs  branch_rules.rs  checks.rs  comments.rs  compare.rs  copilot_config.rs  gh.rs  issue_events.rs  pr_commits.rs  pr_view.rs  pull_request_metadata_attestation.rs  pull_request_view.rs  rate_limit.rs  requested_reviewers.rs  review_threads.rs  reviews.rs  rulesets.rs  stack_root.rs  workflow_runs.rs
ooda-pr/src/orient/: bot_threads.rs  ci.rs  claude_review.rs  closeout.rs  copilot.rs  cursor.rs  doc_review.rs  pr_meta.rs  required_checks.rs  reviews.rs  state.rs  thread.rs
ooda-pr/test/fixtures/github/: branch_protection.json  branch_protection_required_checks.json  issue_comments.json  pr_reviews.json  pr_view_merged.json  review_threads_page.json  ruleset_detail.json
ooda-pr/tests/: cli.rs
ooda-projection/: Cargo.toml
ooda-projection/src/: lib.rs
ooda-prs/: Cargo.toml  README.md  SKILL.md  run
ooda-state/: Cargo.toml  README.md
ooda-state/src/: lib.rs  tokens.rs
orthogonalize-pr/: SKILL.md
park/: SKILL.md
percolate/: SKILL.md
perspectives/: SKILL.md
perspectives-algebras-solve/: SKILL.md
postcompact/: SKILL.md
postcompaction/: SKILL.md
postmortem/: SKILL.md
pr-fitness/: README.md  SKILL.md  eslint.config.js  package-lock.json  package.json
pr-polish/: SKILL.md
precompact/: SKILL.md
prove/: SKILL.md
quineify-review-skill/: SKILL.md
review-pr/: SKILL.md
review-skill/: SKILL.md
review-skill-parallel/: SKILL.md
scripts/: check-mirror-invariants.sh  check-rust-crates.sh  lint-skill-frontmatter.sh  validate-commit-message.sh
socratic/: SKILL.md
solve/: SKILL.md
(+231 files in other folders)
