[package]
name = "ooda-attest"
version = "0.1.0"
edition = "2024"
description = "CLI wrapper around ooda_core::attest for recording PR-meta attestations"

[[bin]]
name = "ooda-attest"
path = "src/main.rs"

[dependencies]
ooda-core = { path = "../ooda-core" }
ooda-state = { path = "../ooda-state" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
