[package]
name = "ooda-codex-review"
version = "0.1.0"
edition = "2024"
description = "OODA loop harness for driving codex review to fixed point across the reasoning ladder"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
