[package]
name = "ooda-core"
version = "0.1.0"
edition = "2024"
description = "Shared boundary types and loop spine for the OODA skill family"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "deny"
