[package]
name = "ooda-core"
version = "0.1.0"
edition = "2024"
description = "Shared boundary types and loop spine for the OODA skill family"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[features]
# Exposes fixture-only escape-hatch constructors (e.g. `BlockerKey::for_test`)
# that bypass production invariants. Domain crates opt in via their
# `[dev-dependencies]` so unit tests can build payload values without
# re-implementing the production discipline; release builds never see them.
test-support = []

[lints.clippy]
pedantic = "deny"
