[package]
name = "ooda-pr-codex-review"
version = "0.1.0"
edition = "2024"
description = "OODA loop harness for driving a PR to merge with optional codex review fixed-point"

[dependencies]
ooda-core = { path = "../ooda-core" }
ooda-state = { path = "../ooda-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
