[package]
name = "ooda-pr"
version = "0.1.0"
edition = "2024"
description = "OODA loop harness for driving a PR to a target fitness tier"

[dependencies]
ooda-core = { path = "../ooda-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
sha2 = "0.10"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
