[package]
name = "ooda-pr"
version = "0.1.0"
edition = "2024"
description = "OODA loop harness for driving a PR to a target fitness tier"

[dependencies]
ooda-core = { path = "../ooda-core" }
ooda-state = { path = "../ooda-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
signal-hook = { version = "0.3", default-features = false }

[dev-dependencies]
ooda-core = { path = "../ooda-core", features = ["test-support"] }
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
