[package]
name = "ooda-projection"
version = "0.1.0"
edition = "2024"
description = "Semantic projection of ooda-state events into a typed RunSnapshot for UI/CLI consumers"

[dependencies]
ooda-state = { path = "../ooda-state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
