[package]
name = "ooda-state"
version = "0.1.0"
edition = "2024"
description = "OODA state-tree — domain-agnostic on-disk model (writer + reader)"

[dependencies]
ooda-core = { path = "../ooda-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
pedantic = "deny"
